@@ -41,8 +41,17 @@ namespace scene
 		//! sets the text string
 		virtual void setText(const wchar_t* text) _IRR_OVERRIDE_;
 
+		//! get the text string
+		virtual const wchar_t* getText() const _IRR_OVERRIDE_;
+
 		//! sets the color of the text
 		virtual void setTextColor(video::SColor color) _IRR_OVERRIDE_;
+
+		//! get the color of the text
+		virtual video::SColor getTextColor() const _IRR_OVERRIDE_;
+
+		//! Get the font used to draw the text
+		virtual gui::IGUIFont* getFont() const _IRR_OVERRIDE_;
 
 		//! Returns type of the scene node
 		virtual ESCENE_NODE_TYPE getType() const _IRR_OVERRIDE_ { return ESNT_TEXT; }
